# Genesis_UR5_robotiq85

./: .gitmodules  README.md  ur5_gripper.urdf
example-robot-data/: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  flake.nix
example-robot-data/python/: CMakeLists.txt
example-robot-data/python/example_robot_data/: human.py  panda.py  robots_loader.py  talos.py  utils.py
example-robot-data/robots/asr_twodof_description/qb_meshes/dae/: qbmove_frame_m.dae
example-robot-data/robots/human_description/: README.md
example-robot-data/robots/human_description/meshes/: abdomen_mesh.STL  elbow_mesh.STL  foot_mesh.STL  hand_mesh.STL  head_mesh.STL  knee_mesh.STL  lowerarm_mesh.STL  lowerleg_mesh.STL  neck_mesh.STL  pelvis_mesh.STL  thight_mesh.STL  torso_mesh.STL  upperarm_mesh.STL  upperleg_mesh.STL
example-robot-data/robots/human_description/robots/: human.urdf
example-robot-data/unittest/: test_load.py
ur5_robot_test/: ur5_robot_test.py
ur5_stack/: ur5_stack_env.py  ur5_stack_eval.py  ur5_stack_train.py
